# pyldraw3

./: .gitignore  .safety-project.ini  CLAUDE.md  GUIDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: benchmark.yml  integration.yml  lint-test.yml  publish.yml  python-package.yml  security.yml
benchmarks/: __init__.py  memory_profile.py  test_geometry.py  test_parts_loading.py
dev/bench/: data.js
examples/: brothers.py  buggy.py  diver.py  figure.py  figures.py  mandelbrot.py  moon_landing.py  spaceman.py  stairs.py
ldraw/: __init__.py  __main__.py  cli.py  colour.py  config.py  dirs.py  download_updates.py  downloads.py  errors.py  figure.py  generate.py  geometry.py  imports.py  lines.py  part.py  parts.py  pieces.py  resources.py  utils.py
ldraw/generation/: __init__.py  colours.py  exceptions.py  parts.py
ldraw/tools/: __init__.py  ldr2inv.py  ldr2png.py  ldr2pov.py  ldr2svg.py
ldraw/writers/: __init__.py  common.py  geometry.py  png.py  povray.py  svg.py
scripts/: parts.py
tests/: conftest.py  test_colour.py  test_config.py  test_download.py  test_dynamic_import.py  test_examples.py  test_geometry.py  test_integration_cli.py  test_integration_examples.py  test_integration_full_workflow.py  test_library_gen.py  test_load_parts.py  test_pieces.py  test_tools.py  test_utils.py
tests/utils/: __init__.py
