[project]
name = "pyldraw3"
version = "0.11.0"
description = "Python wrapper for LDraw library."
readme = "README.rst"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    { name = "David Boddie", email = "david@boddie.org.uk" },
    { name = "Matthieu Berthomé", email = "rienafairefr@gmail.com" },
    { name = "Harold Martin", email = "harold.martin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "platformdirs>=4.3.8",
    "numpy>=2.3.1,<3",
    "pystache>=0.6.0",
    "progress>=1.6.1",
    "pillow>=11.3.0",
    "mock>=5.2.0",
    "requests>=2.32.4",
    "inflect>=7.5.0",
    "ruff>=0.12.4",
    "attridict>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/bosd/uv-hypermodern-python"
Repository = "https://github.com/bosd/uv-hypermodern-python"
Documentation = "https://uv-hypermodern-python.readthedocs.io"
Changelog = "https://github.com/bosd/uv-hypermodern-python/releases"

[project.scripts]
ldr2inv = "ldraw.tools.ldr2inv:main"
ldr2png = "ldraw.tools.ldr2png:main"
ldr2pov = "ldraw.tools.ldr2pov:main"
ldr2svg = "ldraw.tools.ldr2svg:main"
ldraw = "ldraw.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=2.6.0",
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-random-order>=1.2.0",
    "pytest-xdist>=3.8.0",
    "coveralls>=4.0.1",
    "xdoctest[colors] >=0.15.10",
    "ruff>=0.12.4",
    "ty>=0.0.1a16",
    "pyrefly>=0.25.0",
]
docs = [
  "furo >=2021.11.12",
  "myst-parser == 3.0.1",
  "sphinx >= 4.3.2",
  "sphinx-autobuild >=2021.3.14",
  "sphinx-click >=3.0.2",
]

[tool.coverage.paths]
source = ["ldraw", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ldraw", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["ldraw"]

[tool.uv]
package = true

[tool.pydoclint]
exclude = '\.git|\.nox|noxfile.py'

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (run with '--integration')",
]
